--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "4.1.2",
     "typescript": "^5.0.2",
-    "vitest": "^0.29.7"
+    "vitest": "^0.29.7",
+    "vitest-mock-extended": "^1.1.3"
   },
   "dependencies": {
     "@discordjs/rest": "^1.6.0",
