--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,6 +72,11 @@ jobs:
 
       - name: Run unit tests 🧪
         run: yarn test:coverage
+        env:
+          TOKEN: ${{ secrets.TOKEN }}
+          CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          GUILD_ID: ${{ secrets.GUILD_ID }}
+          PRIVATE_BETA_REQUESTS_CHANNEL_ID: ${{ secrets.PRIVATE_BETA_REQUESTS_CHANNEL_ID }}
 
       - name: Collect coverage
         uses: codecov/codecov-action@v3
