fix(swc): error with transforming field with decorator

--- a/.swcrc
+++ b/.swcrc
@@ -7,6 +7,9 @@
       "decorators": true,
       "dynamicImport": true
     },
+    "transform": {
+      "useDefineForClassFields": true
+    },
     "baseUrl": "./"
   },
   "minify": false
