--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "test": "vitest",
-    "test:watch": "vitest --watch",
+    "test": "vitest --run",
+    "test:watch": "vitest",
     "test:coverage": "vitest --coverage",
     "test:e2e": "jest --config jest-e2e.config.ts",
     "test:e2e:watch": "jest --config jest-e2e.config.ts --watch",
@@ -33,7 +33,7 @@
     "@discord-nestjs/core": "5.3.9",
     "@nestjs/common": "^10.1.3",
     "@nestjs/config": "^3.0.0",
-    "@nestjs/core": "^10.1.3",
+    "@nestjs/core": "^10.2.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "discord.js": "14.13.0",
@@ -55,6 +55,7 @@
     "@types/node": "20.5.1",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
+    "@vitest/coverage-v8": "0.34.2",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-typescript": "^3.6.0",
